--- a/public/cv/cvstyle.css
+++ b/public/cv/cvstyle.css
@@ -75,6 +75,10 @@ h2 {
   font-family: 'Bellota Text', sans-serif;
 }
 
+.self > h1 {
+  margin-bottom: 0.8rem;
+}
+
 .side-options {
   position: fixed;
   right: 30px;
@@ -162,9 +166,11 @@ h2 {
 }
 
 .subtitle-column {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 20%;
   padding-right: 1rem;
-  text-align: center;
   border-right: 3px solid #eaeaea;
 }
 
@@ -223,6 +229,10 @@ h2 {
     margin-top: 0.5rem;
   }
 
+  .skills-list {
+    grid-template-columns: 1fr 1fr;
+  }
+
   .subtitle-column {
     width: 100%;
     border-right: none;
@@ -254,6 +264,7 @@ h2 {
   }
   
   .category-title {
+    margin-bottom: 0.6rem;
     font-size: 1.8rem;
   }
 }
